fixed nav error and Convert comments to static data

--- a/welfare-pi.html
+++ b/welfare-pi.html
@@ -646,7 +646,7 @@
                     <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>🧰 Android SDK 工具</span></a>
                     <div id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
                         <a class="dropdown-item" href="index.html?id=android-studio">Android Studio</a>
-                        <a class="dropdown-item" href="ndex.html?id=android-emulator">Android Emulator</a>
+                        <a class="dropdown-item" href="index.html?id=android-emulator">Android Emulator</a>
                         <a class="dropdown-item" href="index.html?id=sdk-tools">SDK Tools</a>
                         <a class="dropdown-item" href="index.html?id=sdk-platform-tools">Platform-tools</a>
                         <a class="dropdown-item" href="index.html?id=build-tools">Build Tools</a>
