--- a/android-emulator-install-guide.html
+++ b/android-emulator-install-guide.html
@@ -43,8 +43,7 @@
 <body data-target=".content-nav">
     <header class="row align-items-center">
         <nav class="navbar navbar-expand-lg navbar-light mx-lg-auto">
-            <a class="navbar-brand mr-lg-4" href="index.html"><!-- <h1 id="nav-title">AndroidDevTools</h1> --><img
-                    style="height: 32px" src="./static/image/androiddevtools.png"></a>
+            <a class="navbar-brand mr-lg-4" href="index.html" alt="首页"><img style="height: 32px" src="./static/image/androiddevtools.png" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -1027,8 +1026,8 @@
         </div>
     </section>
     <div class="zh-backtotop">
-        <a data-action="backtotop" data-tip="回到顶部" class="btn-backtotop btn-action" href="#body">
-            <img class="arrow" src="static/image/backtotop_arrow.png">
+        <a data-action="backtotop" data-tip="回到顶部" alt="回到顶部" class="btn-backtotop btn-action" href="#body">
+            <img class="arrow" alt="回到顶部图标" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <!-- FOOTER  -->
