--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -34,8 +34,7 @@
 <body data-target=".content-nav">
     <header class="row align-items-center">
         <nav class="navbar navbar-expand-lg navbar-light mx-lg-auto">
-            <a class="navbar-brand mr-lg-4" href="index.html"><!-- <h1 id="nav-title">AndroidDevTools</h1> --><img
-                    height="32px" src="./static/image/androiddevtools.png"></a>
+            <a class="navbar-brand mr-lg-4" href="index.html" alt="首页"><img height="32px" src="./static/image/androiddevtools.png" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -736,8 +735,8 @@
         </div>
     </section>
     <div class="zh-backtotop">
-        <a data-action="backtotop" data-tip="回到顶部" class="btn-backtotop btn-action">
-            <img class="arrow" src="static/image/backtotop_arrow.png">
+        <a data-action="backtotop" data-tip="回到顶部" alt="回到顶部"  class="btn-backtotop btn-action">
+            <img class="arrow" alt="回到顶部图标" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <br />
