修复首页移动端适配问题

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <section id="body">
         <div class="container body-container">
             <div class="row flex-column p-3">
-                <div>
+                <div style="max-width: 100%;">
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android
                         SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。
@@ -333,7 +333,7 @@
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
-                <div id="android-studio">
+                <div id="android-studio" style="max-width: 100%;">
                     <h2>Android Studio</h2>
 
                     <blockquote style="color: gray">
@@ -406,7 +406,7 @@
                     <center><a class="btn btn-large btn-action" href="android-studio.html">👉去下载其他版本👈</a></center>
                     <br>
                 </div>
-                <div id="android-emulator">
+                <div id="android-emulator" style="max-width: 100%;">
                     <h2>Android Emulator</h2>
                     <blockquote style="color: gray">
                         <strong style="color: red">注意:</strong>如何手动安装指定版本的模拟器，请 <a href="android-emulator-install-guide.html">点击这里</a> 查看安装指南！
