优化导航栏

--- a/welfare-pi.html
+++ b/welfare-pi.html
@@ -748,13 +748,18 @@
                 </li>
                 <li class="nav-item mx-4"><a class="nav-link" id="aihunt" href="https://aihunt.one">🤖 AI 工具</a></li>
                 <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="usesora" href="https://usesora.io" title="使用 Sora 生成 AI 视频，以及发现 Sora 生成的精彩视频">👉UseSora👈</a></li>
-                <li class="nav-item mx-4"><a class="nav-link" id="welfare" href="welfare-pi.html">🎁 福利𝝅</a></li>
                 <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">💰 捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🔽 更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
-                        <a class="dropdown-item" href="friends.html" id="friends">🧑‍🤝‍🧑 好朋友们</a>
-                        <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
+                      <a class="dropdown-item" href="welfare-pi.html" id="welfare">🎁 福利𝝅</a>
+                      <a class="dropdown-item" href="friends.html" id="friends">🧑‍🤝‍🧑 好朋友们</a>
+                      <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools"
+                        data-title="View GitHub Project"><img width="18px"
+                          src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" />&nbsp;&nbsp;GitHub</a>
+                      <a class="dropdown-item"
+                        href="https://github.com/inferjay/AndroidDevTools/issues/54?utm_source=androiddevtools&utm_medium=website"
+                        id="feedback">🙋 问题反馈</a>
                     </div>
                 </li>
                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
